# AEindex

./: .gitignore  .travis.yml  README.md  README.rst  plotAE.py  setup.cfg  setup.py
aeindex/: __init__.py
