[metadata]
name = aeindex
version = 2.4.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Load and Plot auroral electroject indices
url = https://github.com/space-physics/AEindex
keywords =
  mesosphere
  thermosphere
  ionosphere
  aurora
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
include_package_data = True
packages = find:
install_requires =
  python-dateutil
  numpy
  pandas

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
  seaborn
